--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
     <div class="dashboard">
       <a class="feature" href="chat-ai.html">
-        <img class="feature-img" src="de17e7c5-0155-4dc8-9a7e-24c82ff4f975.png" alt="AI Chat">
+        <img class="feature-img" src="icon-ai.png" alt="AI Chat">
         <div class="feature-title">Chat với AI</div>
         <div class="feature-desc">Tra cứu, hỏi đáp mọi lĩnh vực học tập cùng trợ lý AI.</div>
       </a>
@@ -216,7 +216,7 @@
         <div class="feature-desc">Nhờ AI diễn đạt lại văn bản, tóm tắt, tăng sự sáng tạo.</div>
       </a>
       <a class="feature" href="tu-moi.html">
-        <img class="feature-img" src="38d89319-3315-485d-b765-f9d82994e432.png" alt="Học từ mới">
+        <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
         <div class="feature-title">Học từ mới</div>
         <div class="feature-desc">Luyện tập, ghi nhớ, tra cứu từ mới mỗi ngày cùng flashcard & AI.</div>
       </a>
