--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+  <link rel="icon" type="image/png" href="logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trợ Lý Học Tập & AI</title>
@@ -181,7 +182,7 @@
   <!-- Header -->
   <header>
     <!-- Đổi src logo thành icon/logo của bạn, hoặc xóa nếu không có -->
-    <img src="de17e7c5-0155-4dc8-9a7e-24c82ff4f975.png" class="logo" alt="Logo">
+    <img src="avt.png" class="logo" alt="Logo">
     <div class="site-title">Tra Cứu Học Thuật & AI</div>
     <div class="site-slogan">Nền tảng học tập & trợ lý AI – Dễ dàng, hiệu quả, thông minh!</div>
   </header>
