--- a/chat-ai.html
+++ b/chat-ai.html
@@ -2,41 +2,35 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Chat với AI - Tra Cứu Học Thuật & AI</title>
+  <title>Chat với AI - Trợ Lý Học Tập & AI</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lucide-static@latest/font/lucide.css">
-  <style>
-    body { margin:0; font-family:'Montserrat',Arial,sans-serif; background: #f5f8ff; color: #1a237e;}
-    header, footer {background:#185adb; color:#fff; text-align:center;}
-    header {padding:20px 0 8px 0;}
-    nav {background:#fff; box-shadow:0 2px 12px #185adb22;display:flex;justify-content:center;gap:30px;}
-    nav a {color:#185adb;text-decoration:none;font-weight:600;padding:12px 18px;border-radius:16px 16px 0 0;}
-    nav a.active,nav a:hover{background:#185adb;color:#fff;}
-    .main {max-width:540px;margin:40px auto;background:#fff;border-radius:18px;box-shadow:0 6px 32px 0 #0001;padding:32px 12px 28px;text-align:center;}
-    .main h2 {color:#185adb;}
-    iframe {border-radius:14px;border:1px solid #eee;background:#fff;width:340px;height:480px;box-shadow:0 2px 18px 0 #185adb33;}
-    @media(max-width:650px){iframe{width:98vw;}}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>Tra Cứu Học Thuật & AI</h2>
-  </header>
-  <nav>
-    <a href="index.html">Trang chủ</a>
-    <a href="tailieu.html">Tài liệu học tập</a>
-    <a href="chat-ai.html" class="active">Chat với AI</a>
-    <a href="mindmap.html">Tạo mindmap</a>
-    <a href="y-tuong.html">Gợi ý ý tưởng</a>
-    <a href="viet-lai.html">Viết lại nội dung</a>
-  </nav>
-  <div class="main">
-    <h2>Trợ lý AI hỗ trợ học tập</h2>
-    <p>Hãy nhập câu hỏi hoặc vấn đề bạn cần AI hỗ trợ!</p>
-    <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_"></iframe>
-  </div>
-  <footer>
-    &copy; 2025 Tra Cứu Học Thuật & AI &bull; KoHa
-  </footer>
+  <!-- Hiệu ứng nền, sao rơi -->
+  <div class="bg-deco left"></div>
+  <div class="bg-deco right"></div>
+  <canvas class="star-canvas"></canvas>
+
+  <div id="header"></div>
+  <main>
+    <div class="intro" style="margin-bottom:26px;">
+      <img src="cc9d76f5-edac-47c3-b971-c0d6d027d729.png" style="width:68px;height:68px;border-radius:50%;background:#fff;margin-bottom:10px;box-shadow:0 2px 10px #185adb18;">
+      <div style="font-size:1.23rem;font-weight:700;color:#185adb;margin-bottom:10px;">Trợ lý AI hỗ trợ học tập</div>
+      <div style="font-size:1.09rem;color:#333;">Nhập câu hỏi hoặc chủ đề bạn muốn hỏi – AI sẽ trả lời nhanh chóng, chính xác và thân thiện.</div>
+    </div>
+    <div style="display:flex;justify-content:center;">
+      <iframe
+        src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_"
+        width="350"
+        height="500"
+        style="border-radius:15px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 32px #185adb25;"
+        allow="clipboard-write"
+      ></iframe>
+    </div>
+  </main>
+  <div id="footer"></div>
+  <script src="main.js"></script>
 </body>
 </html>
